# segfuzz

./: .gitignore  .gitmodules  README.md
exp/: scripts
exp/x86_64/: .gitignore
exp/x86_64/templates/: syzkaller.cfg.template
gotools/: .gitignore
kernels/guest/: COMMIT
kernels/guest/configs/: config.x86_64
kernels/guest/tests/: Makefile  README.md
kernels/host/: README
kernels/host/configs/: config-4.15.0-76-generic  config-4.4.0-186-generic  config-5.15.0-35-generic  config-5.4.0-89-generic
kernels/host/patches/: 0001-arch-x86-kvm-Allow-hypercall-with-CPL-larger-than-0.patch  0002-arch-x86-kvm-hcall_constant.h-Updated.patch  0003-x86-Allow-custom-hypercall-from-the-kernel-space.patch  optional-0004-kvm-let-kvm_emulate_hypercall-decide-whether-to-esca.patch
kernels/scripts/: linux  qemu
scripts/: envsetup.sh  functions.sh  install.sh
scripts/capstone/: _envsetup.sh  _install.sh
scripts/cmake/: _envsetup.sh  _install.sh
scripts/dwarves/: _envsetup.sh  _install.sh
scripts/exp/: _install.sh  archive_crashes.py  examine_coverage.py  extract_statistics.py  get_syzkaller_corpus.py  grab_crash_titles.py  inspect_log.py  run_fuzzer.sh  scrap_crash.py  translate_kmemcov_to_source.py
scripts/gcc/: _envsetup.sh  _install.sh
scripts/go/: _envsetup.sh  _install.sh
scripts/linux/: __check_suffix.sh  __create_symlinks.sh  _envsetup.sh  _install.sh  build.sh  create-image-arm64.sh
scripts/llvm/: _envsetup.sh  _install.sh
scripts/llvm/patches/: 0001-Add-softstorebuffer-no_softstorebuffer-attributes.patch  0002-Disable-shrinking-global-variables.patch
scripts/meson/: _envsetup.sh  _install.sh
scripts/misc/: _envsetup.sh
scripts/ninja/: _envsetup.sh  _install.sh
scripts/python/: _envsetup.sh  _install.sh  requirements.txt
scripts/qemu/: _envsetup.sh  _install.sh  _run_qemu_aarch64.sh  _run_qemu_x86_64.sh  attach_gdb.sh  run_qemu.sh  upload.sh
scripts/segfuzz/: _envsetup.sh  _install.sh
tools/: segfuzz
tools/MemcovPass/: CMakeLists.txt
tools/MemcovPass/include/pass/: MemcovPass.h
tools/MemcovPass/pass/: CMakeLists.txt  MemcovPass.cpp
tools/qemu/: .dir-locals.el  .gitignore  configure  meson.build
tools/qemu/qcsched/: breakpoint.c  cookie.c  hcall.c  kssb.c  meson.build  qcsched.c  state.c  timer.c  trampoline.c  vmi.c  window.c
(+161 files in other folders)
